# pontosje

./: .gitignore  README.md  docker-compose.yml  package.json  procfile  requirements.txt
pontosje-algorithm/: .gitignore  .pylintrc  Dockerfile  pyproject.toml
pontosje-algorithm/.devcontainer/: devcontainer.json
pontosje-algorithm/algorithm/common/: common.py
pontosje-algorithm/algorithm/datasets/data_preperation/: hun_szotar_data.csv  process_ertelmezo_szotar.py
pontosje-algorithm/algorithm/experiment/: hun_szotar_data.csv  spelling.ipynb
pontosje-frontend/: Dockerfile  jest.config.js  package-lock.json  package.json
pontosje-frontend/src/: App.js  AppRouter.js  AuthHandler.js  api.js  apiConfig.js  config.js  index.js  store.js  theme.js
pontosje-frontend/src/components/: Drawer.js  Navbar.js  ProtectedRoute.js
pontosje-frontend/src/pages/: DashboardPage.js  HomePage.js  PricingPage.js  ProfilePage.js  SignUpPage.js  WriteGrammarCorrection.js
pontosje-frontend/src/slices/: api.js  apiService.js  appSlice.js  authSlice.js  grammarSlice.js  websocket.js
pontosje-frontend/src/utils/: grammarErrorCorrection.js  (+3 more)
pontosje-venv/: pyvenv.cfg
pontosje_backend/: Dockerfile  manage.py  requirements.txt
pontosje_backend/api/: admin.py  models.py  process_grammar.py  serializers.py  urls.py  views.py
pontosje_backend/grammar_correction/: grammar_consumer.py  process_grammar.py  routing.py
pontosje_backend/pontosje_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pontosje_backend/staticfiles/: staticfiles.json
src/: App.js
(+15 files in other folders)
