[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = "The data processing and algorithm code for the pontosje project."
authors = ["David Tokar <1413david@gmail.com>, Madarasz Gergely <mgergelyjanos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.7"
blingfire = "^0.1.8"
numpy = "^2.0.0"
pandas = "^2.2.2"
pysbd = "^0.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
